--- a/AddinSetup/AddinSetup.wxs
+++ b/AddinSetup/AddinSetup.wxs
@@ -34,13 +34,16 @@
     <Media Id="1" Cabinet="media1.cab" EmbedCab="yes" />
 
     <MajorUpgrade
-      DowngradeErrorMessage="A later version of [ProductName] is already installed. Setup will now exit." AllowSameVersionUpgrades="yes" />
+      DowngradeErrorMessage="A later version of [ProductName] is already installed. Setup will now exit." />
 
     <Directory Id="TARGETDIR" Name="SourceDir">
       <Directory Id="$(var.cf)">
         <Directory Id="COMPANYDIR" Name="UnmanagedVisio" >
           <Directory Id="PRODUCTDIR" Name="MacroButtons">
 
+            <Component Id="HTMLayoutDLL" Win64="$(var.Win64YesNo)">
+              <File KeyPath="yes" Source="lib\$(var.Platform)\htmlayout.dll" />
+            </Component>
             <Component Id="ProductComponent" Win64="$(var.Win64YesNo)">
               <File KeyPath="yes" Source="$(var.Binaries)\Addin.dll" >
                 <TypeLib Id="{03AB8311-3616-4692-A9BE-447DD0F3F6DF}" Description="ShapeSheetWatch Addin 1.0 Type Library" HelpDirectory="TARGETDIR" Language="0" MajorVersion="1" MinorVersion="0">
@@ -69,6 +72,7 @@
     
     <Feature Id="ProductFeature" Title="ShapeSheetWatch Addin" Level="1">
       <ComponentRef Id="ProductComponent" />
+      <ComponentRef Id="HTMLayoutDLL" />
       <ComponentRef Id="VisioRegistration" />
     </Feature>
 
